src/objects/Login_Page_Messages__c.object
<CustomObject>
    <description>Creating a page in the application where program admins can edit the messages displayed in the Login page</description>
    <fields>
        <fullName>Display_Announcements__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to display System Announcements section on the login Page</inlineHelpText>
        <label>Display Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Recent_News__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to display Recent News section on the login page</inlineHelpText>
        <label>Display Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recent_News__c</fullName>
        <inlineHelpText>Textbox for editing the &quot;Recent News&quot; section on the Login Page</inlineHelpText>
        <label>Recent News</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>System_Announcements__c</fullName>
        <inlineHelpText>Textbox for editing the &quot;System Announcements&quot; section on Login Page</inlineHelpText>
        <label>System Announcements</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <label>Login Page Messages</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MSG-{000}</displayFormat>
        <label>Msg Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Login Page Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>